syntax = "proto3";
package grpc.plugins.gloo.solo.io;

option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/plugins/grpc";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;

import "github.com/solo-io/gloo/projects/gloo/api/v1/plugins/transformation/parameters.proto";

message ServiceSpec {
    // TODO(yuval-k): ideally this should be google.protobuf.FileDescriptorSet 
    // but that doesn't work with gogoproto.equal_all.
    bytes descriptors = 1;

    message GrpcService {
        string package_name = 1;
        string service_name = 2;
        repeated string function_names = 3;
    }

    repeated GrpcService grpc_services = 2;
}

// This is only for upstream with Grpc service spec
message DestinationSpec {
    string package  = 1;
    string service  = 2;
    string function = 3;

    transformation.plugins.gloo.solo.io.Parameters parameters = 4;
}